--- a/Config/dwm/dwm-6.1
+++ b/Config/dwm/dwm-6.1
@@ -119,4 +119,4 @@ static Button buttons[] = {
 	{ ClkTagBar,            MODKEY,         Button1,        tag,            {0} },
 	{ ClkTagBar,            MODKEY,         Button3,        toggletag,      {0} },
 };
-
+#vim:   syntax=c 
