Update before end of ssd

--- a/Config/dwm/dwm-6.1
+++ b/Config/dwm/dwm-6.1
@@ -1,5 +1,6 @@
 /* See LICENSE file for copyright and license details. */
 /* appearance */
+fjfaòsffdf
 static const char *fonts[] = {
 	"Droid Sans:size=10"
 };
@@ -119,4 +120,4 @@ static Button buttons[] = {
 	{ ClkTagBar,            MODKEY,         Button1,        tag,            {0} },
 	{ ClkTagBar,            MODKEY,         Button3,        toggletag,      {0} },
 };
-#vim:   syntax=c 
+
